connecting flask to render

--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
     </div>
 
     <script>
-        fetch("/get_strings")
+        fetch("https://manadoku.onrender.com")
             .then(response => response.json())
             .then(data => {
                 console.log("Data received from backend:", data);
